1) Added setup script for mujoco. 2) Changes to siamese config yaml.
1) Added setup script for mujoco.
2) Changes to siamese config yaml.

--- a/configs/xasac_siamese_config.yaml
+++ b/configs/xasac_siamese_config.yaml
@@ -40,6 +40,7 @@ default: &default
     max_age_window: null
   clustering_options:
       clustering_scheme:
+        - Why
         - How_Well
       clustering_scheme_options: {}
       cluster_selection_policy: min
