Migration to ray 2.9.1 and gymnasium
Migration to ray 2.9.1 and gymnasium

--- a/environment/requirements.txt
+++ b/environment/requirements.txt
@@ -1,6 +1,8 @@
-gym
-scipy==1.6.0
-numpy==1.19.5
-matplotlib==3.3.2
-triangle==20200424
+scipy
+numpy
+matplotlib
+triangle
 pygame
+
+gymnasium[mujoco]
+gymnasium[atari]
