--- a/package/requirements.txt
+++ b/package/requirements.txt
@@ -8,12 +8,12 @@ more_itertools
 runstats
 scikit-learn
 
-tensorflow==2.11.0
-tensorflow_probability==0.19.0
+tensorflow
+tensorflow_probability
 
-torch==1.13.1
+torch
 
-ray[rllib]==2.2.0
+ray[rllib]
 pandas
 
-gym
+gymnasium
