--- a/configs/xasac_siamese_config.yaml
+++ b/configs/xasac_siamese_config.yaml
@@ -1,12 +1,13 @@
 default: &default
   framework: torch
+#  rollout_fragment_length: 1
   model:
     custom_model: adaptive_multihead_network
   siamese:
-    use_siamese: true
+    use_siamese: false
     buffer_size: 512
     update_frequency: 5000
-    update_steps: 10
+    update_steps: 3
     embedding_size: 512
     loss_margin: 100000000
   buffer_options:
