1) SiameseNet: faster siamese training 2) SiameseNet: separating training_batch_size from buffer_size 3) Added terminal state info and td-errors to Siamese's output 4) SiameseNet: Automated input size detector for final layer 5) Updated setup_n_run.sh script
1) SiameseNet: faster siamese training
2) SiameseNet: separating training_batch_size from buffer_size
3) Added terminal state info and td-errors to Siamese's output
4) SiameseNet: Automated input size detector for final layer
5) Updated setup_n_run.sh script

--- a/configs/xadqn_siamese_config.yaml
+++ b/configs/xadqn_siamese_config.yaml
@@ -14,7 +14,8 @@ default: &default
   num_steps_sampled_before_learning_starts: 16384
   siamese:
     use_siamese: true
-    buffer_size: 200
+    training_batch_size: 52
+    buffer_size: 520
     update_frequency: 5000
     embedding_size: 2048
     loss_margin: 1
