--- a/configs/xasac_siamese_config.yaml
+++ b/configs/xasac_siamese_config.yaml
@@ -5,16 +5,17 @@ default: &default
     custom_model: adaptive_multihead_network
   siamese:
     use_siamese: true
-    training_batch_size: 512
-    buffer_size: 1024
-    update_frequency: 200
+    training_batch_size: 256
+    buffer_size: 512
+    update_frequency: 2000
     update_steps: 1
-    embedding_size: 2048
+    embedding_size: 512
     loss_margin: 10000000
 
   buffer_options:
-    siamese_num_clusters: 120
-    num_samples_to_recluster: 10000
+    siamese_num_clusters: 80
+    num_samples_to_recluster: 20000
+    n_threads: 4
 
     prioritized_replay: true
     centralised_buffer: true
